--- a/index.html
+++ b/index.html
@@ -693,11 +693,97 @@
 
             <div class="module">
                 <h2 class="center">Lists</h2>
-                
+                <div class="clearspace"></div>
+                <h3>Simple List</h3>
+                <ul class="luxbet_list_page">
+                    <li>
+                        <a>
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R1)</span>
+                            </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a>
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a>
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R3)</span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="clearspace"></div>
+                <h3>Simple List with link arrow</h3>
+                <ul class="luxbet_list_page with-arrows">
+                    <li>
+                        <a>
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">This One has an arrow --></span>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a>
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">This One also has an arrow</span>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a>
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">This One too</span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+
                 <div class="clearspace"></div>
                 <h3>Event List</h3>
 
-                <ul class="luxbet_list_page">
+                <ul class="luxbet_list_page with-icons">
+                    <li>
+                        <a>
+                            <!-- should come from an icon helper -->
+                            <div class="icon icon-sports-horse-racing category-icon"></div>
+
+                            <span class="arrowWrap">
+                                <span class="arrow">&#8250;</span>
+                            </span>
+
+                            <span class="titleWrap">
+                                <span class="title">The Event name (ie TrackName R2)</span>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="clearspace"></div>
+                <h3>Event List Detailed</h3>
+
+                <ul class="luxbet_list_page detailed">
                     <li>
                         <a>
                             <!-- should come from an icon helper -->
@@ -726,9 +812,9 @@
 
 
                 <div class="clearspace"></div>
-                <h3>Event List (racing)</h3>
+                <h3>Event List Detailed (racing)</h3>
 
-                <ul class="luxbet_list_page">
+                <ul class="luxbet_list_page detailed">
                     <li class="resulted">
                         <a>
                             <!-- should come from an icon helper -->
